                                      Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 24-01-2005 changed: Default IMDb url is now akas.imdb.com for alternative title support.
  - 24-01-2005 added: [1105853]Added locks & context menu to My Programs, fixed some bugs - thanks to slacker!
  - 24-01-2005 fixed: music info tag, remove possible \r\n at the end of a tag field (artist, title...)
  - 24-01-2005 updated: Finnish language file (Thnx to jutski)
  - 24-01-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 24-01-2005 updated: Norwegian language file (Thnx to vnmartinsen)
  - 24-01-2005 updated: Italian language file (Thnx to kotix)
  - 24-01-2005 fixed: Zoom mode in Combo renderer + glitches.  Should be as good as (or surpass) the YUY2 Overlays method now.
  - 22-01-2005 fixed: memory leak in Kai UI
  - 21-01-2005 fixed: the heading of dialog keyboard was not displayed
  - 21-01-2005 updated: German language file
  - 21-01-2005 changed: XLink window and dialogs are localizable now
  - 19-01-2005 added: [ 1099915 ] Enable debug log by pressing X+Y while starting XBMC (Thanks to jarkkom). Enables logdebug, mplayerdebug and showfreemem.
  - 19-01-2005 updated: Finnish language file (Thnx to jutski)
  - 18-01-2005 updated: Catalan language file (Thnx to buc)
  - 18-01-2005 updated: German language file
  - 18-01-2005 updated: German (Austrian) language file (Thnx to CEOMR)
  - 18-01-2005 updated: Norwegian language file (Thnx to vnmartinsen)
  - 17-01-2005 added: some more startuplogging
  - 17-01-2005 fixed: Minor blackscreen issues when starting videos in some view modes (NB: Zoom is still not functioning in the overlay modes).