@@ -5,6 +5,9 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 26-01-2005 added: Options to disable looking for custom thumbs on remote shares (folder.jpg/folder.tbn/<filename>.tbn),
+                      Will speed things up on a slow connection and/or slow server and/or you have many folders.
+                      Settings -> My Videos/My Music -> Library
   - 24-01-2005 changed: Default IMDb url is now akas.imdb.com for alternative title support.
   - 24-01-2005 added: [1105853]Added locks & context menu to My Programs, fixed some bugs - thanks to slacker!
   - 24-01-2005 fixed: music info tag, remove possible \r\n at the end of a tag field (artist, title...)
